# Browser-Sense

./: .gitignore  CLAUDE.md  GridBrowserLauncher.py  README.md  architecture_diagram.py  browser-automation-architecture.md  pyproject.toml
browser-use-hacked/browser_use/agent/: image_comparison.py  prompts.py  service.py
browser-use-hacked/browser_use/agent/message_manager/: service.py
browser-use-hacked/browser_use/screenshots/: service.py
browser_sense/: __init__.py  agents.py  mcp_server.py  test_agent.py
browser_sense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
browser_sense_results/test_sessions/4a3ee490-260f-455b-9d17-ab89a9c515c8_20250823_085311/: metadata.json
browser_sense_results/test_sessions/4a3ee490-260f-455b-9d17-ab89a9c515c8_20250823_085311/qa_agents/agent_0/: step_001_metadata.json  step_002_metadata.json  step_003_metadata.json  step_004_metadata.json
browser_sense_results/test_sessions/4a3ee490-260f-455b-9d17-ab89a9c515c8_20250823_085311/qa_agents/agent_1/: step_001_metadata.json  step_002_metadata.json  step_003_metadata.json  step_004_metadata.json
browser_sense_results/test_sessions/scout_1755964380_20250823_085300/: metadata.json
browser_sense_results/test_sessions/scout_1755964380_20250823_085300/qa_agents/scout_agent/: step_001_metadata.json
screenshot_mcp/: README.md  __init__.py  demo_test.py  pyproject.toml  server.py  test_client.py  test_server.py
screenshot_mcp/screenshot_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test_website/: package-lock.json  package.json
test_website/src/pages/: ar.tsx  en.tsx  index.tsx  zh.tsx
test_website/src/styles/: globals.css
test_website_2/: package-lock.json  package.json
test_website_2/src/app/: globals.css  page.tsx
test_website_2/src/app/contact/: page.tsx
test_website_2/src/app/service/: page.tsx
test_website_2_bw/src/components/: Layout.tsx  Navigation.tsx
test_website_2_color/src/app/: globals.css  layout.tsx  page.tsx
test_website_2_color/src/app/ar/: page.tsx
test_website_2_color/src/app/contact/: page.tsx
test_website_2_color/src/app/en/: page.tsx
test_website_2_color/src/app/service/: page.tsx
test_website_2_color/src/app/zh/: page.tsx
test_website_2_color/src/components/: Layout.tsx
vibetest/: agents.py
