[project]
name = "browser-sense"
version = "0.1.0"
description = "BrowserSense is a browser agent with real senses — it sees, feels, and understands your app — beyond code perfection, like a real-user"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.0.0",
  "browser-use",
  "playwright",
  "langchain_google_genai",
  "langchain_core",
  "pydantic",
  "screeninfo",
]

[tool.setuptools.packages.find]
include = ["browser_sense*"]

[project.scripts]
browser-sense-mcp = "browser_sense.mcp_server:run"